force-app/main/default/objects/Sales_Agreement_Product__c/Sales_Agreement_Product__c.object-meta.xml
<CustomObject>
    <label>契約製品</label>
    <nameField>
        <displayFormat>SAP-{0000}</displayFormat>
        <label>契約製品番号</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>契約製品</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>