force-app/main/default/objects/Sales_Agreement_Product__c/fields/BOM_Header__c.field-meta.xml
<CustomField>
    <fullName>BOM_Header__c</fullName>
    <label>BOM</label>
    <type>Lookup</type>
    <referenceTo>BOM_Header__c</referenceTo>
    <relationshipName>Sales_Agreement_Products</relationshipName>
    <relationshipLabel>契約製品</relationshipLabel>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>