force-app/main/default/objects/Sales_Agreement_Product__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <label>製品</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>契約製品</relationshipLabel>
    <relationshipName>Agreement_Products</relationshipName>
    <type>Lookup</type>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>