force-app/main/default/objects/Sales_Agreement_Product__c/fields/Sales_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Sales_Agreement__c</fullName>
    <label>販売契約</label>
    <referenceTo>Sales_Agreement__c</referenceTo>
    <relationshipLabel>契約製品</relationshipLabel>
    <relationshipName>Agreement_Products</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>